--- a/public/views/partials/admin/discussion.html
+++ b/public/views/partials/admin/discussion.html
@@ -1,4 +1,11 @@
 <div>
+
+    <section class="content-header" style="margin-bottom: 10px;">
+        <h1>
+        {{course_name}}
+      </h1>
+    </section>
+
     <div class="main-content">
 
         <div class="row">
