--- a/public/css/ThaiCustom.css
+++ b/public/css/ThaiCustom.css
@@ -21,6 +21,28 @@
     color: #bbb
 }
 
-.no-hover > li > a:hover{
+.no-hover>li>a:hover {
     background: transparent !important;
+}
+
+.demo-detail {
+    white-space: nowrap;
+    width: 100%;
+    display: inherit;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.scroll::-webkit-scrollbar {
+    width: 5px;
+}
+
+.scroll::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.5); 
+    border-radius: 3px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+    border-radius: 1px;
+    -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.2); 
 }
