--- a/public/views/partials/admin/gradebook.html
+++ b/public/views/partials/admin/gradebook.html
@@ -1,5 +1,5 @@
 <div>
-    <section class="content-header">
+    <section class="content-header" style="margin-bottom: 10px;">
         <h1>
         {{course_name}}
       </h1>
