--- a/public/views/partials/admin/resource.html
+++ b/public/views/partials/admin/resource.html
@@ -2,55 +2,42 @@
     <section class="content-header" style="margin-bottom: 10px;">
         <h1>
         {{course_name}}
+        <small>Course resources</small>
       </h1>
     </section>
-    
     <div class="main-content">
         <input type="file" id="myfile" onchange="angular.element(this).scope().loadedfile()" style="display: none;">
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="box">
-                    <div class="box-header">
-                        <h3 class="box-title">Course resources</h3>
-                        <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#myModal" ng-click="resource = {}" style="float: right;">
-                            <span class="glyphicon glyphicon-plus"></span> Add
+        <div class="row" style="padding-right: 30px">
+            <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#myModal" ng-click="resource = {}" style="float: right;">
+                <span class="glyphicon glyphicon-plus"></span> Add
+            </button>
+        </div>
+        <div class="row" style="margin-top: 5px">
+            <div class="col-md-3 col-sm-6 col-xs-12" ng-repeat="file in files">
+                <div class="info-box bg-aqua">
+                    <span class="info-box-icon"><i class="fa fa-paperclip"></i></span>
+                    <div class="info-box-content">
+                        
+                        <a href="{{file.attURL}}" target="_self" class="btn btn-effets btn-primary btn-xs pull-right" style="margin-left: 3px;" download="{{file.attNAME}}"><span class="glyphicon glyphicon-download-alt" ></span></a>
+                        <button type="button" class="btn btn-success btn-xs pull-right" ng-click="editResource(file.RESOURCES_ID)" ng-if="editting == ''">
+                            <span class="glyphicon glyphicon-edit"></span>
                         </button>
+                        <button type="button" style="margin-left: 3px;" class="btn btn-success btn-xs pull-right" ng-click="updateResource(file)" ng-if="file.RESOURCES_ID == editting">
+                            <span class="glyphicon glyphicon-floppy-disk"></span>
+                        </button>
+                        <button type="button" style="margin-left: 3px;" class="btn btn-danger btn-xs pull-right" ng-click="deleteResource(file)" ng-if="file.RESOURCES_ID == editting">
+                            <span class="glyphicon glyphicon-trash"></span>
+                        </button>
+
+                        <span class="info-box-text" ng-if="file.RESOURCES_ID != editting" ng-bind="file.NAME"></span>
+                        <span ng-if="file.RESOURCES_ID != editting" ng-bind="file.DESCRIPTION" style="display: block;height: 40px;overflow: hidden;text-overflow: ellipsis;font-size: 12px;line-height: 14px;"></span>
+                        <span class="info-box-text" ng-if="file.RESOURCES_ID == editting">
+                              <input ng-model="file.NAME"  class="form-control input-sm" />
+                        </span>
+                        <span class="info-box-text" ng-if="file.RESOURCES_ID == editting" style="margin-top: 5px">
+                              <input ng-model="file.DESCRIPTION" class="form-control input-sm"/>
+                        </span>
                     </div>
-                    <!-- /.box-header -->
-                    <div class="box-body table-responsive no-padding">
-                        <table class="table table-hover">
-                            <tbody>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Description</th>
-                                    <th style="width: 300px"></th>
-                                </tr>
-                                <tr ng-repeat="file in files">
-                                    <td ng-if="file.RESOURCES_ID != editting">{{ file.NAME }}</td>
-                                    <td ng-if="file.RESOURCES_ID != editting">{{ file.DESCRIPTION }}</td>
-                                    <td ng-if="file.RESOURCES_ID == editting">
-                                        <input ng-model="file.NAME" />
-                                    </td>
-                                    <td ng-if="file.RESOURCES_ID == editting">
-                                        <input ng-model="file.DESCRIPTION" />
-                                    </td>
-                                    <td style="text-align: right"><a href="{{file.attURL}}" target="_self" class="btn btn-effets btn-primary btn-sm" download="{{file.attNAME}}"><span class="glyphicon glyphicon-download-alt"></span></a>
-                                        <button type="button" class="btn btn-success btn-sm" ng-click="editResource(file.RESOURCES_ID)" ng-if="editting == ''">
-                                            <span class="glyphicon glyphicon-edit"></span>
-                                        </button>
-                                        <button type="button" class="btn btn-success btn-sm" ng-click="updateResource(file)" ng-if="file.RESOURCES_ID == editting">
-                                            <span class="glyphicon glyphicon-floppy-disk"></span>
-                                        </button>
-                                        <button type="button" class="btn btn-danger btn-sm" ng-click="updateResource(file)" ng-if="file.RESOURCES_ID == editting">
-                                            <span class="glyphicon glyphicon-trash"></span>
-                                        </button>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <!-- /.box-body -->
                 </div>
                 <!-- /.box -->
             </div>
