chỉnh lại css Gradebook

--- a/public/views/index_admin.html
+++ b/public/views/index_admin.html
@@ -157,6 +157,15 @@
     <!---AdminLTE- -->
     <script src="../js/adminlte.js"></script>
     <script src="../js/adminlte.min.js"></script>
+    <script src="../js/jquery.sparkline.min.js"></script>
+    <script src="../js/jquery.knob.js"></script>
+    <script src="../js/ThaiCustom.js"></script>
+
+    <script type="text/javascript">
+        $(function(){
+            drawChart();
+        })
+    </script>
 
 </body>
 </html>
