--- a/public/views/partials/admin/announcement.html
+++ b/public/views/partials/admin/announcement.html
@@ -15,7 +15,7 @@
     <div class="main-content">
         <div class="row">
             <div class="col-xs-12 col-md-{{announcement_detail == null ? '12' : '4'}} max-height-full scroll">
-                <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#newAnnouncementModal" style="float:right">
+                <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#newAnnouncementModal">
                     <span class="glyphicon glyphicon-plus"></span> Add
                 </button>
                 <!-- The time line -->
