--- a/public/css/ThaiCustom.css
+++ b/public/css/ThaiCustom.css
@@ -46,3 +46,7 @@
     border-radius: 1px;
     -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.2); 
 }
+
+.profile-label {
+    font-weight: bold;
+}
