--- a/public/views/index_admin.html
+++ b/public/views/index_admin.html
@@ -6,14 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/">
     <title>Sakai</title>
-    <link rel="stylesheet" href="../libs/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../libs/bootstrap/dist/css/bootstrap.min.css">
+    <!-- Bootstrap 3.3.7 -->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="bower_components/Ionicons/css/ionicons.min.css">
+    <!-- Theme style -->
+    <link rel="stylesheet" href="dist/css/AdminLTE.min.css">
+    <!-- AdminLTE Skins. Choose a skin from the css/skins
+    folder instead of downloading all of them to reduce the load. -->
+    <link rel="stylesheet" href="dist/css/skins/_all-skins.min.css">
+    <!-- Morris chart -->
+    <link rel="stylesheet" href="bower_components/morris.js/morris.css">
+    <!-- jvectormap -->
+    <link rel="stylesheet" href="bower_components/jvectormap/jquery-jvectormap.css">
+    <!-- Date Picker -->
+    <link rel="stylesheet" href="bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
+    <!-- Daterange picker -->
+    <link rel="stylesheet" href="bower_components/bootstrap-daterangepicker/daterangepicker.css">
+    <!-- bootstrap wysihtml5 - text editor -->
+    <link rel="stylesheet" href="plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+
+      <!-- Google Font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
     <link rel="stylesheet" type="text/css" href="../libs/ng-tags-input/ng-tags-input.css">
-    <!-- <link rel="stylesheet" type="text/css" href="../css/admin.css">
-    <link rel="stylesheet" type="text/css" href="../css/sidebar.css">
-     --><link rel="stylesheet" type="text/css" href="../css/AdminLTE.css">
-     <link rel="stylesheet" type="text/css" href="../css/ThaiCustom.css">
-    <link rel="stylesheet" type="text/css" href="../css/AdminLTE.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/ThaiCustom.css">
     <link rel="stylesheet" href="../css/skins/_all-skins.min.css">
 </head>
 
@@ -22,7 +47,7 @@
         <header class="main-header">
 
             <!-- Logo -->
-            <a href="index2.html" class="logo">
+            <a href="sakai" class="logo">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
                 <span class="logo-mini"><b>A</b>LT</span>
                 <!-- logo for regular state and mobile devices -->
@@ -70,7 +95,7 @@
                         <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
                     </div>
                 </div>
-                <ul class="sidebar-menu tree">
+                <ul class="sidebar-menu tree" data-widget="tree">
                     <li class="header">COURSES</li>
 
                     <li ng-repeat="course in courses" class="treeview" ng-init="course.temp.e = false" >
@@ -81,7 +106,7 @@
                                 <i class="fa {{ course.temp.e || cid == course.COURSE_CLASS_ID ? 'fa-angle-left' : 'fa-angle-down'}} pull-right"></i>
                             </span>
                         </a>
-                        <ul class="treeview-menu collapse slow {{course.temp.e || cid == course.COURSE_CLASS_ID ? 'in' : ''}}">
+                        <ul class="treeview-menu {{course.temp.e || cid == course.COURSE_CLASS_ID ? 'in' : ''}}">
                             <li><a href="/sakai/announcement" id="menu{{course.COURSE_CLASS_ID}}-4" ng-click="setCid(course.COURSE_CLASS_ID, 4, course.TITLE)">Announcement</a></li>
                             <li><a href="/sakai/resource" id="menu{{course.COURSE_CLASS_ID}}-0" ng-click="setCid(course.COURSE_CLASS_ID, 0, course.TITLE)">Resource</a></li>
                             <li><a href="/sakai/gradebook" id="menu{{course.COURSE_CLASS_ID}}-1" ng-click="setCid(course.COURSE_CLASS_ID, 1, course.TITLE)">GradeBook</a></li>
@@ -106,7 +131,6 @@
     <script src="../libs/angular/angular.min.js"></script>
     <script src="../libs/angular-route/angular-route.min.js"></script>
     <script src="../libs/jquery/dist/jquery.min.js"></script>
-    <script src="../libs/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- SCRIPT -->
     <script src="../libs/js-xlsx/dist/xlsx.core.min.js"></script>
     <script src="../libs/js-xlsx/shim.js"></script>
@@ -123,7 +147,6 @@
     <script src="../libs/ng-table/dist/ng-table.min.js"></script>
     <script src="../libs/angular-md5/angular-md5.js"></script>
     <script src="../libs/ng-tags-input/ng-tags-input.js"></script>
-    <script src="../js/adminlte.js"></script>
     <script src="../js/appAdminRoutes.js"></script>
     <script src="../js/filters.js"></script>
     <script src="../js/directives/appDirectives.js"></script>
@@ -147,19 +170,23 @@
 
     <script src="../js/controllers/admin/adminAssignmentController.js"></script>
     <script src="../js/services/admin/AdminAssignmentService.js"></script>
-    <script src="../bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
-    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="../bower_components/fastclick/lib/fastclick.js"></script>
-    <script src="../plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-    <script src="../plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
-
-    <!---AdminLTE- -->
-    <script src="../js/adminlte.js"></script>
-    <script src="../js/adminlte.min.js"></script>
-    <script src="../js/jquery.sparkline.min.js"></script>
-    <script src="../js/jquery.knob.js"></script>
+    
     <script src="../js/ThaiCustom.js"></script>
+    
+    <!-- jQuery 3 -->
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+   
+    <!-- Bootstrap 3.3.7 -->
+    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- AdminLTE App -->
+    <script src="../dist/js/adminlte.min.js"></script>
+    <!-- jQuery Knob Chart -->
+    <script src="bower_components/jquery-knob/dist/jquery.knob.min.js"></script>
+    <!-- Sparkline -->
+    <script src="bower_components/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
+    <!-- jvectormap -->
+    <script src="plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
+    <script src="plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
 
     <script type="text/javascript">
         $(function(){
