--- a/public/views/partials/admin/assignment.html
+++ b/public/views/partials/admin/assignment.html
@@ -8,10 +8,10 @@
     <div class="main-content">
         <div class="row">
             <div class="col-xs-12">
-                <button ng-if="isTeacher" type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#newAssignmentModal" style="float:right">
+                <button ng-if="isTeacher" type="button" class="btn btn-success btn-sm" data-toggle="modal" ng-click="initNewAssignment()" data-target="#newAssignmentModal" style="float:right">
                     <span class="glyphicon glyphicon-plus"></span> Add
                 </button>
-                <div class="box">
+                <div class="box" style="margin-top: 35px;">
                     <div class="box-body table-responsive no-padding">
                         <table class="table table-hover">
                             <tbody>
